# odoo-custom

./: .dockerignore  .env.example  .gitignore  .gitmodules  .railwayignore  Dockerfile  Dockerfile.railway  docker-compose.yml  railway-entrypoint.sh  railway.toml
.github/: SECRETS.md  required-checks.yml
.github/workflows/: agentlab-daily-restore.yml  build-migration-runner.yml  ci.yml  deploy-slack-intake.yml  ghcr-publish.yml  hotfix-prod.yml  hotfix-retro-brief-check.yml  implementation-intent-confirmed.yml  implementation-iterate.yml  migration-dry-run-staging.yml  migration-queue-sweeper.yml  migration-rollback.yml  notify-reporter-on-human-commit.yml  pgbackrest-backup.yml  preview-cleanup.yml  restore-drill.yml  (+7 more)
agents/: config.example.yml  pyproject.toml
config/: odoo-railway.conf  odoo.conf
custom-addons/: .build-timestamp
docs/: 2026-05-18-admin-crud-surfaces-infographic.html  2026-05-18-customer-portal-infographic.html  2026-05-18-deferred-items-7-and-8.md  2026-05-18-execution-decisions-log.md  2026-05-18-image-digest-autocomplete-infographic.html  2026-05-18-renew-license-action-infographic.html  2026-05-18-session-report.md  enterprise-customer-install.md  hotel-management-category-hidden.md  odoo temp promp
infra/: odoo-entrypoint.sh
infra/runners/migration_runner/: Dockerfile  __main__.py  db.py  heartbeat.py  pyproject.toml  rollback.py  runner.py  snapshot.py  window.py
infra/runners/migration_runner/tests/: test_db.py  test_rollback_cli.py  test_rollback_run.py  test_runner.py  test_snapshot.py  test_window.py
jorels-addons/: .gitignore
(+633 files in other folders)
